--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<header>
+<header id="home">
   <nav class="navbar navbar-expand-lg" style="background-color:black;color:white">
     <a class="navbar-brand">TamilNad Papers</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -10,22 +10,22 @@
         <li 
           class="nav-item" 
         >
-          <a class="nav-link text-white" href="#">Home</a>
+          <a class="nav-link text-white" fragments="home"  (click)="navigateToSection('home')">Home</a> 
         </li>
         <li 
           class="nav-item" 
         >
-          <a class="nav-link text-white" href="#prod">Products</a>
+        <a class="nav-link text-white" fragments="prod"  (click)="navigateToSection('prod')">Products</a> 
         </li>
         <li 
           class="nav-item" 
         >
-          <a class="nav-link text-white" href="#">About me</a>
+        <a class="nav-link text-white" fragments="aboutme"  (click)="navigateToSection('aboutme')">About me</a> 
         </li>
         <li 
           class="nav-item" 
         >
-          <a class="nav-link text-white" href="#">Contact</a>
+        <a class="nav-link text-white" fragments="contactme"  (click)="navigateToSection('contactme')">Contactm</a> 
         </li>
       </ul>
     </div>
@@ -40,13 +40,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="../../assets/images/caro1.jpg" alt="First slide">
+        <img class="d-block w-100" src="../../assets/images/P.jpeg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../../assets/images/caro2.jpg" alt="Second slide">
+        <img class="d-block w-100" src="../../assets/images/c2.jpeg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../../assets/images/caro3.jpg" alt="Third slide">
+        <img class="d-block w-100" src="../../assets/images/c1.jpeg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -59,16 +59,11 @@
     </a>
   </div>
 </div>
-<div class="container-flush text-center head-cont">
-  <h2 class="heading">TamilNad Papers</h2>
-  <div class="container text-center">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-  </div>
-</div>
+
 <div class="container-fluid ourproducts " id="prod">
   <h1 class="text-center pt-5">Our Products</h1>
   <div class="container-fluid">
-    <h3 class="text-center pt-5">Product 1</h3>
+    <h3 class="text-center pt-5">Crafting Sheets</h3>
     <div class="row">
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
@@ -79,8 +74,11 @@
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name</p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Crushed Sheet</p>
+            <p class="card-text">Price : Rs.600 per packet
+              Prempari Handmade sheets for crafting purpose.16 packets per bundle.
+            </p>
+
           </div>
         </div>
       </div>
@@ -93,8 +91,10 @@
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name</p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Brown Board</p>
+            <p class="card-text">Price :16gsm-1000,14gsm-800,12gsm-600.
+              Classic Brown Board - 16gsm,14gsm and 12gsm.10 packets per bundle.
+            </p>
           </div>
         </div>
       </div>
@@ -107,8 +107,9 @@
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name</p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Gum-Sheet</p>
+            <p class="card-text">Price :400 per packet.
+              Premium Gumsheets -china imported[20 gsm]16pacs per bundle            </p>
           </div>
         </div>
       </div>
@@ -121,8 +122,10 @@
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name</p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Gift-Wrappers</p>
+            <p class="card-text">Price : 200 per packet.
+              packet contains 20 sheets.customized sheets.16 packets per bundle.
+            </p>
           </div>
         </div>
       </div>
@@ -135,27 +138,31 @@
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name </p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Varnish Papers </p>
+            <p class="card-text">Price : 300 per packet.
+              Each Packet contains 16 colours.Colours can be customized.20 packets per bundle.
+            </p>
           </div>
         </div>
       </div>
     </div>
   </div>
   <div class="container-fluid">
-    <h3 class="text-center pt-5">Product 2</h3>
+    <h3 class="text-center pt-5">Boards and Charts</h3>
     <div class="row">
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
           <img 
             class="flex-fill Card-image" 
-            src = "../../assets/images/pr1.jpeg" 
+            src = "../../assets/images/glp.jpeg" 
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name</p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Butter Paper</p>
+            <p class="card-text">Price : 100 per packet.
+              Basing for cakes and foods . 4 per bundle 
+            </p>
           </div>
         </div>
       </div>
@@ -163,13 +170,15 @@
         <div class="card flex-fill" style="width: 180px;">
           <img 
             class="flex-fill Card-image" 
-            src = "../../assets/images/pr2.jpeg" 
+            src = "../../assets/images/gup.jpeg" 
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name</p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Tissue Papers</p>
+            <p class="card-text">Price : 500 per packet.
+              14gsm white,14 gsm unbleached,16 gsm white available.price varies accordingly.
+            </p>
           </div>
         </div>
       </div>
@@ -177,13 +186,15 @@
         <div class="card flex-fill" style="width: 180px;">
           <img 
             class="flex-fill Card-image" 
-            src = "../../assets/images/pr3.jpeg" 
+            src = "../../assets/images/pr6.jpeg" 
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name</p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Black Board</p>
+            <p class="card-text">Price : 1200 per packet.
+              Black Board with different Gsm's available.16 packets per bundle.
+            </p>
           </div>
         </div>
       </div>
@@ -191,13 +202,15 @@
         <div class="card flex-fill" style="width: 180px;">
           <img 
             class="flex-fill Card-image" 
-            src = "../../assets/images/pr4.jpeg" 
+            src = "../../assets/images/pr8.jpeg" 
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name</p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Colour Boards</p>
+            <p class="card-text">Price : 200 per packet.
+              Small - Sized colour reem Boards for small -scale commercials.20 pacs per bundle.
+            </p>
           </div>
         </div>
       </div>
@@ -205,13 +218,15 @@
         <div class="card flex-fill" style="width: 180px;">
           <img 
             class="flex-fill Card-image" 
-            src = "../../assets/images/pr5.jpeg" 
+            src = "../../assets/images/gp.jpeg" 
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Product Name </p>
-            <p class="card-text">Price : product price</p>
+            <p class="card-title" style="font-weight: bold;">Glitter Sheets </p>
+            <p class="card-text">Price : 500 per packet.
+              Glittery Gumsheets for Stationary and ornamental papers.10 pacs per bundle.
+            </p>
           </div>
         </div>
       </div>
@@ -219,12 +234,12 @@
   </div>
 </div>
 <div class="pt-5"></div>
-<div class="container-fluid aboutme ">
+<div class="container-fluid aboutme " id="aboutme">
   <h1 class="text-center pt-5">About Me</h1>
   <div class="coll pt-5">
     <div class="col1 text-center">
       <h1>About</h1>
-      <p>Tamilnad Papers is an industry leading Paper Supplier, supplying individuals and companies with the products they need. We were founded in 2000 by Jane Doe, and have been located in San Francisco ever since. Learn all about Tamilnad Papers and what we offer by giving us a call. We’ll be happy to assist you with any information regarding a specific product or service.</p>
+      <p>Tamilnad Papers is an industry leading Paper Supplier, supplying individuals and companies with the products they need. It was  started in 2010 by the proprietor A.KrishnaMurthy, and have been located in Coimbaore since 2010. Learn all about Tamilnad Papers and what we offer by giving us a call. We’ll be happy to assist you with any information regarding a specific product or service.</p>
     </div>
     <div class="col2">
       <img src="../../assets/images/caro3.jpg" alt="" class="card-img" height="500px" style="border-radius: 10px;">
@@ -232,14 +247,16 @@
   </div>
 </div>
 
-<div class="container-fluid contact ">
+<div class="container-fluid contact " id="contactme">
   <h1 class="text-center pt-5">Contact</h1>
   <div class="coll pt-5">
     <div class="col1 text-center" style="width:600px; border-radius: 2px;">
       <h1>Contact</h1>
-      <p>500 Terry Francois Street San Francisco, CA 94158</p>
-      <p>shwethak.18cse@kongu.edu</p>
-      <p>1234567890</p>
+      <p>N0.5 Somu Complex,Union high School road,Townhall,coimbatore-641001. </p>
+      <p>krishnaMurthy@kongu.edu</p>
+      <p>8012270801
+        8012270802
+      </p>
     </div>
     <div class="col2" style="width:600px; border-radius: 2px;">
       <img src="../../assets/images/caro2.jpg" alt="" class="card-img" height="500px" style="border-radius: 2px;">
