--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,29 +7,35 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li 
-          class="nav-item" 
+        <li
+          class="nav-item"
         >
-          <a class="nav-link text-white" fragments="home"  (click)="navigateToSection('home')">Home</a> 
+          <a class="nav-link text-white" fragments="home"  (click)="navigateToSection('home')">Home</a>
         </li>
-        <li 
-          class="nav-item" 
+        <li
+          class="nav-item"
         >
-        <a class="nav-link text-white" fragments="prod"  (click)="navigateToSection('prod')">Products</a> 
+        <a class="nav-link text-white" fragments="prod"  (click)="navigateToSection('prod')">Products</a>
         </li>
-        <li 
-          class="nav-item" 
+        <li
+          class="nav-item"
         >
-        <a class="nav-link text-white" fragments="aboutme"  (click)="navigateToSection('aboutme')">About me</a> 
+
+        <a class="nav-link text-white" fragments="cart"  routerLink="/cart" routerLinkActive="active">Cart</a>
         </li>
-        <li 
-          class="nav-item" 
+        <li
+          class="nav-item"
         >
-        <a class="nav-link text-white" fragments="contactme"  (click)="navigateToSection('contactme')">Contactm</a> 
+        <a class="nav-link text-white" fragments="aboutme"  (click)="navigateToSection('aboutme')">About me</a>
+        </li>
+        <li
+          class="nav-item"
+        >
+        <a class="nav-link text-white" fragments="contactme"  (click)="navigateToSection('contactme')">Contactm</a>
         </li>
       </ul>
     </div>
-  </nav>  
+  </nav>
 </header>
 <div class="container-flush caro">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -66,9 +72,9 @@
     <div class="row">
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/pr1.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/pr1.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
@@ -83,9 +89,9 @@
       </div>
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/pr2.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/pr2.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
@@ -99,9 +105,9 @@
       </div>
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/pr3.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/pr3.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
@@ -114,9 +120,9 @@
       </div>
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/pr4.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/pr4.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
@@ -130,9 +136,9 @@
       </div>
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/pr5.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/pr5.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
@@ -151,25 +157,25 @@
     <div class="row">
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/glp.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/glp.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
           <div class="card-body">
             <p class="card-title" style="font-weight: bold;">Butter Paper</p>
             <p class="card-text">Price : 100 per packet.
-              Basing for cakes and foods . 4 per bundle 
+              Basing for cakes and foods . 4 per bundle
             </p>
           </div>
         </div>
       </div>
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/gup.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/gup.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
@@ -183,9 +189,9 @@
       </div>
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/pr6.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/pr6.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
@@ -199,9 +205,9 @@
       </div>
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/pr8.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/pr8.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
@@ -215,9 +221,9 @@
       </div>
       <div class="col-sm d-flex pt-4">
         <div class="card flex-fill" style="width: 180px;">
-          <img 
-            class="flex-fill Card-image" 
-            src = "../../assets/images/gp.jpeg" 
+          <img
+            class="flex-fill Card-image"
+            src = "../../assets/images/gp.jpeg"
             alt="Card-image cap"
             style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
           >
@@ -269,7 +275,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="navbar-brand" style="margin-top: 27px;">
-          <img src="../../assets/images/youandme.png" alt="" style="height: 22px; width: 22px;margin-top: 5px;" class="d-inline-block align-top"> TamilNad Papers 
+          <img src="../../assets/images/youandme.png" alt="" style="height: 22px; width: 22px;margin-top: 5px;" class="d-inline-block align-top"> TamilNad Papers
         </div>
         <p>About Tamilnad Papers <br>Designed by Shwetha.</p>
       </div>
@@ -293,9 +299,9 @@
           </tbody>
         </table>
       </div>
-    </div> 
+    </div>
     <hr style="background-color:white;opacity: 0.7;border-radius: 12px;" class="col-6">
-    <p id="copyright" class="text-center  ">Copyright © Shwetha </p> 
+    <p id="copyright" class="text-center  ">Copyright © Shwetha </p>
   </div>
 </footer>
 <!-- Footer -->
