--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container-flush">
   <div id="container" class="col-md-4 col-sm-8">
-      <form class="form" id="my-form">
+      <form class="form" id="my-form" #postForm="ngForm" (ngSubmit)="onSubmit();postForm.reset()">
           <div class="container">
               <div class="text-center heading ">
                   <h1 style="font-weight:500">Login</h1>
@@ -33,8 +33,8 @@
               </div>
       
               <div class="text-center pt-4">
-                  <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
-                  <!-- <p class="forgot-pass pt-2">Forgot Username / Password?</p> -->
+                  <button type="submit" class="btn btn-primary" >Submit</button><br>
+                  <p class="forgot-pass pt-2" (click)="goSignup()">New to TamilNad Paper!</p>
               </div>
           </div>
       </form>
