--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,12 +1,12 @@
-#my-form {
-  height: 430px; 
+.my-form {
+  /* height: 400px;  */
   margin: auto;
   background-color: rgba(255,255,255,0.7);
   border-radius: 12px;
 }
 
 .form{
-  padding: 50px 30px;
+  padding: 20px 30px;
 }
 
 .form-control {
