--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,10 +6,10 @@
 
 <div class="container-flush">
   <div id="container" class="col-md-4 col-sm-8">
-      <form class="form" id="my-form" #postForm="ngForm" (ngSubmit)="onSubmit();postForm.reset()">
+      <form class="form" id="my-form" #postForm="ngForm" >
           <div class="container">
               <div class="text-center heading ">
-                  <h1 style="font-weight:500">Login</h1>
+                  <h1 style="font-weight:500">Admin Login</h1>
               </div>
               <div class="form-group pt-5">
               <input
@@ -17,13 +17,11 @@
                   class="form-control"
                   id="username"
                   placeholder="Username"
-                  [(ngModel)]="Username"
-                  [ngModelOptions]="{standalone: true}"
-                  (ngModelChange)='onChange1($event)'
+
+
               >
               <!-- <p>{{Username}}</p> -->
               <!-- <p class="err-msg">Enter your Username</p> -->
-              <p *ngIf="status1" class="err-msg">{{msg1}}</p>
               </div>
               <div class="form-group pt-2">
               <input
@@ -31,16 +29,13 @@
                   class="form-control"
                   id="userpassword"
                   placeholder="Password"
-                  [(ngModel)]="Password"
-                  [ngModelOptions]="{standalone: true}"
-                  (ngModelChange)='onChange2($event)'
+
+
               >
-              <p *ngIf="status2" class="err-msg">{{msg2}}</p>
               </div>
 
               <div class="text-center pt-4">
                   <button type="submit" class="btn btn-primary" >Login</button><br>
-                  <p class="forgot-pass pt-2" (click)="goSignup()">New to TamilNad Paper!</p>
                   <p class="forgot-pass pt-2" (click)="goHome()">Home</p>
               </div>
           </div>
