--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,7 +18,7 @@
   height: 600px;
   background-color: black;
   color:white;
-  /* display: flex;  
+  /* display: flex;
   flex-direction: column; */
 }
 
@@ -62,7 +62,7 @@
   height: 600px;
   background-color: lightgrey;
   color:black;
-  /* display: flex;  
+  /* display: flex;
   flex-direction: column; */
 }
 
@@ -80,7 +80,7 @@
   width: 100%;
 }
 #copyright {
-  font-family: Arial, Helvetica, sans-serif; 
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
   color:lightgray;
   margin-top: -10px;
@@ -93,3 +93,17 @@
 .nav-link {
   cursor: pointer;
 }
+.carousel-item img.d-block {
+	width: 80%;
+	margin-left: 10%;
+}
+@media screen and (max-width: 430px) {
+	button {
+		width: 100%;
+	}
+	.carousel-item img.d-block {
+		width: 100%;
+		margin-left:0;
+	}
+}
+
