--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,12 @@
         <li
           class="nav-item"
         >
-        <a class="nav-link text-white" fragments="prod"  (click)="navigateToSection('prod')">Products</a>
+        <a class="nav-link text-white" fragments="services"  (click)="navigateToSection('services')">Services</a>
+        </li>
+        <li
+          class="nav-item"
+        >
+        <a class="nav-link text-white" fragments="prod"  routerLink="/product" routerLinkActive="active">Products</a>
         </li>
         <li
           class="nav-item"
@@ -31,12 +36,38 @@
         <li
           class="nav-item"
         >
-        <a class="nav-link text-white" fragments="contactme"  (click)="navigateToSection('contactme')">Contactm</a>
+        <a class="nav-link text-white" fragments="contactme"  (click)="navigateToSection('contactme')">Contact me</a>
         </li>
+        <li
+          class="nav-item"
+        >
+
+        <a class="nav-link text-white" fragments="login"  routerLink="/login" routerLinkActive="active">Login</a>
+        </li>
+        <li
+          class="nav-item"
+        >
+
+        <a class="nav-link text-white" fragments="signup"  routerLink="/signup" routerLinkActive="active">SignUp</a>
+        </li>
+        <li
+          class="nav-item"
+        >
+
+        <a class="nav-link text-white" fragments="signout"  routerLink="/login" routerLinkActive="active">Sign Out</a>
+        </li>
+        <li
+        class="nav-item"
+      >
+
+      <a class="nav-link text-white" fragments="adminlogin"  routerLink="/admin" routerLinkActive="active">Admin Login</a>
+      </li>
+
       </ul>
     </div>
   </nav>
 </header>
+<div class="container mb-5">
 <div class="container-flush caro">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -46,13 +77,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="../../assets/images/P.jpeg" alt="First slide">
+        <img class="d-block w-100" src="../../assets/images/5.jpeg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../../assets/images/c2.jpeg" alt="Second slide">
+        <img class="d-block w-100" src="../../assets/images/3.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../../assets/images/c1.jpeg" alt="Third slide">
+        <img class="d-block w-100" src="../../assets/images/2.jpg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -65,174 +96,42 @@
     </a>
   </div>
 </div>
-<div class="container-fluid ourproducts " id="prod">
-  <h1 class="text-center pt-5">Our Products</h1>
-  <div class="container-fluid">
-    <h3 class="text-center pt-5">Crafting Sheets</h3>
-    <div class="row">
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/pr1.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Crushed Sheet</p>
-            <p class="card-text">Price : Rs.600 per packet
-              Prempari Handmade sheets for crafting purpose.16 packets per bundle.
-            </p>
+</div>
 
-          </div>
-        </div>
+<div class="row my-5" id="services">
+  <div class="col-12">
+  <h1 class="text-center mb-5">Services</h1>
+  <div class="accordion" id="accordionExample">
+    <div class="card">
+      <div class="card-header" id="headingOne">
+        <h2 class="mb-0">
+          <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Wholesale Market
+          </button>
+        </h2>
       </div>
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/pr2.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Brown Board</p>
-            <p class="card-text">Price :16gsm-1000,14gsm-800,12gsm-600.
-              Classic Brown Board - 16gsm,14gsm and 12gsm.10 packets per bundle.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/pr3.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Gum-Sheet</p>
-            <p class="card-text">Price :400 per packet.
-              Premium Gumsheets -china imported[20 gsm]16pacs per bundle            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/pr4.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Gift-Wrappers</p>
-            <p class="card-text">Price : 200 per packet.
-              packet contains 20 sheets.customized sheets.16 packets per bundle.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/pr5.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Varnish Papers </p>
-            <p class="card-text">Price : 300 per packet.
-              Each Packet contains 16 colours.Colours can be customized.20 packets per bundle.
-            </p>
-          </div>
-        </div>
+
+      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+        <div class="card-body">
+          Wholesaling or distributing is the sale of goods or merchandise to retailers; to industrial, commercial, institutional or other professional business users; or to other wholesalers (wholesale businesses) and related subordinated services.[1] In general, it is the sale of goods in bulk to anyone other than a standard consumer. Wholesaling is the selling of merchandise to anyone either a person or an organization other than the end consumer of that merchandise.
       </div>
     </div>
-  </div>
-  <div class="container-fluid">
-    <h3 class="text-center pt-5">Boards and Charts</h3>
-    <div class="row">
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/glp.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Butter Paper</p>
-            <p class="card-text">Price : 100 per packet.
-              Basing for cakes and foods . 4 per bundle
-            </p>
-          </div>
-        </div>
+    <div class="card">
+      <div class="card-header" id="headingTwo">
+        <h2 class="mb-0">
+          <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            About Products
+          </button>
+        </h2>
       </div>
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/gup.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Tissue Papers</p>
-            <p class="card-text">Price : 500 per packet.
-              14gsm white,14 gsm unbleached,16 gsm white available.price varies accordingly.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/pr6.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Black Board</p>
-            <p class="card-text">Price : 1200 per packet.
-              Black Board with different Gsm's available.16 packets per bundle.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/pr8.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Colour Boards</p>
-            <p class="card-text">Price : 200 per packet.
-              Small - Sized colour reem Boards for small -scale commercials.20 pacs per bundle.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm d-flex pt-4">
-        <div class="card flex-fill" style="width: 180px;">
-          <img
-            class="flex-fill Card-image"
-            src = "../../assets/images/gp.jpeg"
-            alt="Card-image cap"
-            style="height: 200px; padding-right: 0px; border-radius: 8px 8px 0px 0px; border: none;"
-          >
-          <div class="card-body">
-            <p class="card-title" style="font-weight: bold;">Glitter Sheets </p>
-            <p class="card-text">Price : 500 per packet.
-              Glittery Gumsheets for Stationary and ornamental papers.10 pacs per bundle.
-            </p>
-          </div>
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+        <div class="card-body">
+          The company does  wholesale business in medium scale and the products are imported from china and from several mills of delhi, Mumbai and Kolkata.
+          They  are  the Second-hand sellers where the paper products of different types are bought directly from the Mills and exported in and out of Tamilnadu.
+          The binding Sheets  and CC fabric are taken up by the offset printers for notebook binding .
+          The creamy sellers are GUMSHEETS where those are used for making labels for notebooks.
+          VARNISH and CRAFT sheets are used for craft and décor purpose .
+          BUTTERPAPER  for food wrapping and cake mounting.
         </div>
       </div>
     </div>
@@ -258,7 +157,7 @@
     <div class="col1 text-center" style="width:600px; border-radius: 2px;">
       <h1>Contact</h1>
       <p>N0.5 Somu Complex,Union high School road,Townhall,coimbatore-641001. </p>
-      <p>krishnaMurthy@kongu.edu</p>
+      <p>krishnaMurthy@gmail.edu</p>
       <p>8012270801
         8012270802
       </p>
@@ -277,7 +176,7 @@
         <div class="navbar-brand" style="margin-top: 27px;">
           <img src="../../assets/images/youandme.png" alt="" style="height: 22px; width: 22px;margin-top: 5px;" class="d-inline-block align-top"> TamilNad Papers
         </div>
-        <p>About Tamilnad Papers <br>Designed by Shwetha.</p>
+        <p>About Tamilnad Papers <br>Designed by Yazhini.</p>
       </div>
       <div class="col-md-6">
         <table class="table table-borderless table-sm "style="color:white">
@@ -288,20 +187,20 @@
           </thead>
           <tbody>
             <tr>
-              <td> <a href="mailto:happygowthaman@gmail.com" id="mail"> <img src="../../assets/images/gmail.png" style="height: 16px;width: 16px;" > shwethak.18cse@kongu.edu </a> </td>
+              <td> <a href="mailto:tamilnadpapers@gmail.com" id="mail"> <img src="../../assets/images/gmail.png" style="height: 16px;width: 16px;" > tamilnadpapers@gmail.com </a> </td>
             </tr>
             <tr>
-              <td> <img src="../../assets/images/instagram.png" style="height: 16px;width: 16px;"> shwetha Krishnan</td>
+              <td> <img src="../../assets/images/instagram.png" style="height: 16px;width: 16px;"> TamilNad Papers</td>
             </tr>
             <tr>
-              <td> <img src="../../assets/images/twitter.png" style="height: 16px;width: 16px;"> its_youandme_</td>
+              <td> <img src="../../assets/images/twitter.png" style="height: 16px;width: 16px;"> its_tamilnad_Papers</td>
             </tr>
           </tbody>
         </table>
       </div>
     </div>
     <hr style="background-color:white;opacity: 0.7;border-radius: 12px;" class="col-6">
-    <p id="copyright" class="text-center  ">Copyright © Shwetha </p>
+    <p id="copyright" class="text-center  ">Copyright © TamilNadPapers</p>
   </div>
 </footer>
 <!-- Footer -->
